@@ -176,7 +176,7 @@
 #   +name{param}  # enable and set parameter to "param"
 #   -name         # disable
 #
-# Multi-value (e.g. "add-header", "send-wafer"):
+# Multi-value (e.g. "add-header", "filter"):
 #   +name{param}  # enable and add parameter "param"
 #   -name{param}  # remove the parameter "param"
 #   -name         # disable totally
@@ -471,17 +471,6 @@
 #    Convinces the browser that the requested document has been moved to
 #    another location and the browser should get it from the specified
 #    URL.
-#
-# +send-vanilla-wafer
-#    This action only applies if you are using a jarfile.  It sends a
-#    cookie to every site stating that you do not accept any copyright
-#    on cookies sent to you, and asking them not to track you.  Of
-#    course, this is a (relatively) unique header they could use to 
-#    track you.
-#
-# +send-wafer{name=value}
-#    This allows you to add an arbitrary cookie.  Specify it multiple
-#    times in order to add several cookies.
 #
 #############################################################################
 
